--- a/td3/index.html
+++ b/td3/index.html
@@ -21,8 +21,14 @@
 
     <script src="todos_index_controller.js"></script>
     <script src="todo_resource.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <div id="header">
+    <h1>Todolist</h1>
+  </div>
+  <div id="clearBackground">
   <div id="sidebar" ng-controller="ListsIndexController">
 		<ul>
 			<li ng-repeat="list in todolists">
@@ -34,9 +40,10 @@
       <button ng-click="deleteList()">Supprimer Liste</button>
     </div>
 	</div>
-  <a ng-href="#/new">Nouvelle tâche</a>
+  <a class="boutonA" ng-href="#/new">Nouvelle tâche</a>
 		<div id="main-content" ng-view>
 
     </div>
+  </div>
 </body>
 </html>
