--- a/td3/index.html
+++ b/td3/index.html
@@ -21,6 +21,7 @@
 
       <script src="todos_index_controller.js"></script>
       <script src="todo_resource.js"></script>
+      <script src="todo_directive.js"></script>
       <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
