--- a/td3/index.html
+++ b/td3/index.html
@@ -12,23 +12,24 @@
   <script src="lib/angular-route.min.js"></script>
   <script src="lib/angular-sanitize.min.js"></script>
 
-  <script src="app.js"></script>
+  <script src="app/app.js"></script>
 
-  <script src="lists_factory.js"></script>
-  <script src="lists_new_controller.js"></script>
-  <script src="lists_resource.js"></script>
-  <script src="lists_index_controller.js"></script>
+  <script src="app/lists_factory.js"></script>
+  <script src="app/lists/lists_new_controller.js"></script>
+  <script src="app/lists/lists_resource.js"></script>
+  <script src="app/lists/lists_index_controller.js"></script>
 
-      <script src="todos_index_controller.js"></script>
-      <script src="todo_resource.js"></script>
-      <script src="todo_directive.js"></script>
-      <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div id="header">
-      <h1>Todolist</h1>
-    </div>
-    <div id="clearBackground">
+  <script src="app/todos/todos_index_controller.js"></script>
+  <script src="app/todos/todo_resource.js"></script>
+  <script src="app/todos/todo_directive.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div id="header">
+    <h1>Todolist</h1>
+  </div>
+  <div id="main">
+    <div class="clearBackgroundSidebar">
       <div id="sidebar" ng-controller="ListsIndexController">
         <ul>
           <li ng-repeat="list in todolists">
