--- a/td3/index.html
+++ b/td3/index.html
@@ -42,7 +42,7 @@
         <div id="interactionLists">
           <div ng-controller="NewListController">
             <button ng-click="deleteList()">Supprimer Liste</button>
-            <a class="boutonA" ng-href="#/new">Nouvelle tâche</a>
+            <a class="boutonA" ng-href="#/new">Nouvelle Liste</a>
           </div>
         </div>
       </div>
